# fastapi-scraper-api-sii-chile

./: .flake8  Makefile  pyproject.toml  readme.md
app/: main.py
app/dependencies_factory/: repositories.py
app/dependencies_factory/use_cases/: __init__.py  _development_unit_cases.py
app/implementations/: __init__.py
app/implementations/repositories/: __init__.py
app/implementations/repositories/sii_chile/: __init__.py  development_unit_implementation.py
app/src/: __init__.py  _development_unit.py
app/src/cases/: __init__.py
app/src/cases/development_unit/: __init__.py  _get_development_unit_by_date_case.py  _request.py  _response.py
app/src/domain/: __init__.py
app/src/domain/domain_objects/: __init__.py  _development_unit.py
app/src/domain/repositories/: __init__.py  _development_unit_repository.py
app/src/exceptions/: __init__.py  _development_unit.py
app/tests/unit/cases/development_unit/: get_development_unit_by_date_case_unit_test.py  request_validation_unit_test.py
app/tests/unit/endpoints/development_unit/: get_development_unit_by_date_unit_test.py
app/web/: __init__.py  _middlewares.py
app/web/_exception_handlers/: __init__.py
