[tool.poetry]
name = "api-sii-chile"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "api_sii_chile"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = "^1.10.7"
bs4 = "^0.0.1"
faker = "^18.7.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
